Implemented Create in Presentation

--- a/presentation/src/App.css
+++ b/presentation/src/App.css
@@ -1,5 +1,11 @@
 ul {
   list-style: none;
+  padding: 0;
+}
+form {
+  display:flex;
+  flex-direction: column;
+  margin: 0 35%;
 }
 
 .App {
@@ -39,4 +45,9 @@ ul {
   to {
     transform: rotate(360deg);
   }
+}
+
+#add_platform{
+  width: 60%;
+  align-self: center;
 }
